syntax = "proto3";
package pb;


service CheckSite{
    rpc VerifySite(VerifySiteRequest) returns (VerifySiteResponse) {}
}


message VerifySiteRequest {
    string site_url = 1;
    string key = 2;
}


message VerifySiteResponse {
    bool found = 1;
}